<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.k.chatroomapp.RoomMgrActivity">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/room_spinner"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_centerInParent="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_room"
        android:id="@+id/delRoomBt"
        android:layout_below="@+id/room_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/delRoomBt"
        android:gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chatroomid"
                android:layout_marginEnd="30dp"
                android:gravity="center"/>
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/roomIDEt"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chatroompassword"
                android:layout_marginEnd="30dp"
                android:gravity="center"/>
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/passwordEt"
                android:inputType="numberPassword"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="70dp">
            <Button
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/add_room"
                android:layout_marginEnd="60dp"
                android:id="@+id/addRoomBt" />
            <Button
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/back"
                android:id="@+id/backBt" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
