<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.k.chatroomapp.RegActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/nameEt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/headImage"
        android:layout_below="@+id/nameEt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:id="@+id/bubbleImage"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/headImage"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bubbleclick"
        android:id="@+id/textView"
        android:layout_below="@+id/bubbleImage"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/okBt"
        android:layout_marginBottom="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headclick"
        android:id="@+id/textView2"
        android:layout_below="@+id/headImage"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
